--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,5 +1,18 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+
+
+      <ion-back-button 
+        defaultHref="/" 
+        text="Volver" 
+        color="primary" 
+        mode="ios">
+      </ion-back-button>
+
+
+    </ion-buttons>
+
     <ion-title>action-sheet</ion-title>
   </ion-toolbar>
 </ion-header>
