--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,9 +1,14 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>alert</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-back-button defaultHref="/" text="Volver" color="primary" mode="md" ></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   
 </ion-content>
+
