Modulo de componentes - Header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,11 @@
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar>
-    <ion-title>alert</ion-title>
+    <ion-title>HEADER GENRICO</ion-title>
 
     <ion-buttons slot="end">
       <ion-back-button defaultHref="/" text="Volver" color="primary" mode="md" ></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-header> -->
-<app-header></app-header>
-
-<ion-content>
-  
-</ion-content>
+</ion-header>
+<!-- <p>OKKK</p> -->
 
