--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
 
@@ -15,7 +15,9 @@
 
     <ion-title>action-sheet</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
+
+<app-header></app-header>
 
 <ion-content>
 
