--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>HEADER GENRICO</ion-title>
+    <ion-title class="ion-text-capitalize" >{{ title }}</ion-title>
 
     <ion-buttons slot="end">
       <ion-back-button defaultHref="/" text="Volver" color="primary" mode="md" ></ion-back-button>
