--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -17,7 +17,7 @@
   </ion-toolbar>
 </ion-header> -->
 
-<app-header></app-header>
+<app-header title="action sheet"></app-header>
 
 <ion-content>
 
