--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -7,7 +7,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header> -->
-<app-header></app-header>
+<app-header title="alert"></app-header>
 
 <ion-content>
   
