--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,15 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Componentes</ion-title>
+    <ion-title color="success">Componentes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<ion-button routerLink="/alert" >
+<!-- <ion-button routerLink="/alert" >
   Alert
 </ion-button>
 
 <ion-button routerLink="/action-sheet">
   Action sheet  
-</ion-button>
-</ion-content>
+</ion-button> -->
+
+<ion-list>
+  <ion-item *ngFor="let item of componentes" [routerLink]="item.redirectTo" >
+    <ion-icon name="{{ item.icon }}" slot="start" color="primary"></ion-icon>
+    {{ item.name }}
+  
+  </ion-item>
+</ion-list>
