--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -14,7 +14,7 @@
 </ion-button> -->
 
 <ion-list>
-  <ion-item *ngFor="let item of componentes" [routerLink]="item.redirectTo" >
+  <ion-item *ngFor="let item of componentes" [routerLink]="item.redirectTo" detail>
     <ion-icon name="{{ item.icon }}" slot="start" color="primary"></ion-icon>
     {{ item.name }}
   
