--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -19,6 +19,8 @@
 
 <app-header title="action sheet"></app-header>
 
-<ion-content>
-
+<ion-content class="ion-padding">
+  <ion-button (click)="onClick()" expand="block">
+    Action sheet  
+  </ion-button>
 </ion-content>
