Componente ion-alert

--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -9,7 +9,17 @@
 </ion-header> -->
 <app-header title="alert"></app-header>
 
-<ion-content>
-  
-</ion-content>
+<ion-conten class="ion-paddding">
+  <ion-button (click)=" presentAlert()" expand="block" >
+    Alert
+  </ion-button>
+
+  <ion-button (click)="presentAlertMultipleButtons()" expand="block" >
+    Alert Multiple Buttons
+  </ion-button>
+
+  <ion-button (click)="presentAlertPrompt()" expand="block" >
+    Alert Prompt
+  </ion-button>
+</ion-conten>
 
