--- a/src/app/pages/avatar/avatar.page.html
+++ b/src/app/pages/avatar/avatar.page.html
@@ -1,9 +1,39 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>avatar</ion-title>
+    <ion-title>Avatar</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/" text="Volver"></ion-back-button>
+    </ion-buttons>
+
+    <ion-buttons slot="end">
+      <ion-avatar>
+        <img src="./assets/testing.png" />
+      </ion-avatar>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
+<!-- <app-header title="avatar"></app-header> -->
+
 <ion-content>
+
+  <ion-chip color="primary" outline="true" 
+    *ngFor="let item of [1,1,1,1,1,1]">
+    <ion-avatar>
+      <img src="/assets/testing.png" />
+    </ion-avatar>
+    <ion-label>Default</ion-label>
+  </ion-chip>
+
+    <ion-list *ngFor="let item of [1,1,1,1]">
+      <ion-item>
+      <ion-avatar slot="end">
+         <img src="/assets/testing.png" />
+       </ion-avatar>
+       <ion-label>Label</ion-label>
+      </ion-item>
+     
+    </ion-list>
+
 
 </ion-content>
