--- a/src/app/pages/avatar/avatar.page.html
+++ b/src/app/pages/avatar/avatar.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Avatar</ion-title>
+    <ion-title color="primary">Avatar</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/" text="Volver"></ion-back-button>
     </ion-buttons>
@@ -27,7 +27,7 @@
 
     <ion-list *ngFor="let item of [1,1,1,1]">
       <ion-item>
-      <ion-avatar slot="end">
+      <ion-avatar slot="start">
          <img src="/assets/testing.png" />
        </ion-avatar>
        <ion-label>Label</ion-label>
