--- a/src/app/pages/check/check.page.html
+++ b/src/app/pages/check/check.page.html
@@ -1,9 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>check</ion-title>
-  </ion-toolbar>
-</ion-header>
+
+<app-header title="check"></app-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let item of data" (click)="onClick(item)">
+      <ion-label>{{ item.name }}</ion-label>
+      <ion-checkbox slot="end" color="{{ item.name }}" mode="ios" ></ion-checkbox>
+    </ion-item>
+  </ion-list>
+ <ion-button (click)="verData()" expand="block" color="primary">
+   Ver data
+ </ion-button>
 </ion-content>
