--- a/src/app/pages/date-time/date-time.page.html
+++ b/src/app/pages/date-time/date-time.page.html
@@ -51,6 +51,18 @@
     </ion-item>
 
 
+    <ion-item>
+      <ion-label>Custom Options</ion-label>
+      
+        <ion-datetime 
+        [pickerOptions]="customPickerOptions"
+        [yearValues]="customYearValues"
+        >
+      </ion-datetime>
+      
+    </ion-item>
+
+
 
 
   </ion-list>
