--- a/src/app/pages/fab/fab.page.html
+++ b/src/app/pages/fab/fab.page.html
@@ -1,9 +1,37 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>fab</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="fab"></app-header>
 
 <ion-content>
+   <!-- fab placed to the top end -->
+   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
 
+    <ion-fab-list side="top">
+      <ion-fab-button color="facebook"><ion-icon name="logo-facebook"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="logo-youtube"></ion-icon></ion-fab-button>
+    </ion-fab-list>
+
+    <ion-fab-list side="start">
+      <ion-fab-button><ion-icon name="logo-github"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="logo-google"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="logo-linkedin"></ion-icon></ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+
+
+  <ion-list *ngFor="let item of data; let i = index">
+    <ion-item>
+      <ion-label>Item {{ i+1 }}</ion-label>
+      
+    </ion-item>
+  
+  </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
