--- a/src/app/pages/grid/grid.page.html
+++ b/src/app/pages/grid/grid.page.html
@@ -1,9 +1,23 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>grid</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="grid"></app-header>
 
 <ion-content>
+<ion-grid fixed>
+  <ion-row>
+    <ion-col *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1]">
+      <ion-card>
+        <ion-img src="assets/testing.png"></ion-img>
+      </ion-card>
 
+      <ion-card-header>
+        <ion-card-subtitle>Awesome Subtitle</ion-card-subtitle>
+        <ion-card-title>Awesome Title</ion-card-title>
+      </ion-card-header>
+
+      <ion-card-content>
+        Awesome content
+      </ion-card-content>
+    </ion-col>
+    
+  </ion-row>
+</ion-grid>
 </ion-content>
