--- a/src/app/pages/grid/grid.page.html
+++ b/src/app/pages/grid/grid.page.html
@@ -1,9 +1,10 @@
 <app-header title="grid"></app-header>
 
 <ion-content>
-<ion-grid fixed>
+<ion-grid fixed >
   <ion-row>
-    <ion-col *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1]">
+    <ion-col size="12" size-lg="3" size-md="4" size-sm="6"
+          *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1]">
       <ion-card>
         <ion-img src="assets/testing.png"></ion-img>
       </ion-card>
