--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -13,10 +13,32 @@
   Action sheet  
 </ion-button> -->
 
-<ion-list>
-  <ion-item *ngFor="let item of componentes" [routerLink]="item.redirectTo" detail>
-    <ion-icon name="{{ item.icon }}" slot="start" color="primary"></ion-icon>
-    {{ item.name }}
-  
-  </ion-item>
-</ion-list>
+<ion-grid >
+  <ion-row>
+    <ion-col size="12" size-lg="3" size-md="4" size-sm="4" size-xs="6" *ngFor="let item of componentes">
+
+      <ion-card [routerLink]="item.redirectTo">
+        <!-- <ion-img src="{{item.img}}"></ion-img> -->
+        <ion-card-header>
+          
+          <ion-card-title>
+            <ion-icon name="{{ item.icon }}"  color="primary"></ion-icon> {{ item.name }}
+            
+          </ion-card-title>
+        </ion-card-header>
+        <!-- <ion-card-content>
+ 
+        </ion-card-content> -->
+      </ion-card>
+      <!-- <ion-list>
+        <ion-item *ngFor="let item of componentes" [routerLink]="item.redirectTo" detail>
+          <ion-icon name="{{ item.icon }}" slot="start" color="primary"></ion-icon>
+          {{ item.name }}
+        
+        </ion-item>
+      </ion-list> -->
+    </ion-col>
+   
+  </ion-row>
+</ion-grid>
+
